--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/models/*"
+    ],
+    "delay": 2500
   }
 }
